--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <html>
             <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-                <title>Sociro - v20240909</title>
+                <title>siro-client-v20240916</title>
             </head>
             <body>
                 <script>
@@ -24,29 +24,12 @@
                                     socketProxy: "wss://rlaig.com:5999/",
                                     packetKeys: false,
 									renewal: true
-                                },
-								{
-                                    display: 'sociro-beta-experiment',
-                                    desc: "Beta-Experimental",
-                                    address: 'rlaig.com',
-                                    port: 6900,
-                                    version: 55,
-                                    langtype: 1,
-                                    packetver: 20220406,
-                                    forceUseAddress: false,
-                                    socketProxy: "wss://rlaig.com:5999/",
-                                    packetKeys: false,
-									renewal: true
-                                },
-
+                                }
                             ],
-							version: 20240909.00,
-                            packetDump:  false,
-                            skipServerList:  false,
-                            skipIntro:       true,
-                            plugins: {
-                                KeyToMove: 'KeyToMove/KeyToMove',
-							},
+							version: 20240916.00,
+                            packetDump: false,
+                            skipServerList: true,
+                            skipIntro: true,
 							clientHash: null,
 							enableCashShop: false,
 							enableBank: true,
@@ -57,7 +40,6 @@
 							CameraMaxZoomOut: 3,
                             loadLua: true,
                         };
-
                         script = document.createElement('script');
                         script.type = 'text/javascript';
                         script.src = 'Online.js';
