--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
 							CameraMaxZoomOut: 3,
                             loadLua: true,
                         };
+                        script = document.createElement('script');
+                        script.type = 'text/javascript';
+                        script.src = 'Online.js';
+                        document.getElementsByTagName('body')[0].appendChild(script);
                     });
                 </script>
-                <script type="text/javascript" src="./Online.js"></script>
             </body>
         </html>
