--- a/live/index.html
+++ b/live/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
+  <link rel="manifest" href="sociroapp.webmanifest">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>sro</title>
   <style>
     #browser {
       width: 100%;
-      height: auto;
+      height: 100%;
+    }
+    #app {
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
 <body>
   <div id="browser">
-    <iframe id="app"src="app.html"></iframe>
+    <iframe id="app" src="app.html"></iframe>
   </div>
 </body>
 </html>
