fix: viewport and aspect ration

--- a/live/index.html
+++ b/live/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="manifest" href="sociroapp.webmanifest">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
   <title>sro</title>
   <style>
     #browser {
@@ -11,8 +11,7 @@
       height: 100%;
     }
     #app {
-      width: 100%;
-      height: 100%;
+      aspect-ratio: auto 1024/768;
     }
   </style>
 </head>
