--- a/live/index.html
+++ b/live/index.html
@@ -6,12 +6,17 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
   <title>sro</title>
   <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+    }
     #browser {
       width: 100%;
       height: 100%;
     }
     #app {
-      aspect-ratio: auto 1024/768;
+      width: 100%;
+      aspect-ratio: 1024/768;
     }
   </style>
 </head>
