--- a/live/app.html
+++ b/live/app.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="manifest" href="sociroapp.webmanifest">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <script>
             window.addEventListener("load", (event) => {
                 window.ROConfig = {
@@ -21,7 +26,7 @@
                             renewal: true
                         }
                     ],
-                    version: 20240917.00,
+                    version: 20240924.01,
                     packetDump: false,
                     skipServerList: true,
                     skipIntro: true,
@@ -42,5 +47,24 @@
             }, false);
         </script>
     </head>
-    <body></body>
+    <body>
+<script>
+  function toggleFullScreen() {
+    if (!document.fullscreenElement) {
+      document.documentElement.requestFullscreen();
+    } else if (document.exitFullscreen) {
+      document.exitFullscreen();
+    }
+  }
+  document.addEventListener(
+    "touchstart",
+    (e) => {
+      if (e.touches.length === 3) {
+        toggleFullScreen();
+      }
+    },
+    false,
+  );
+</script>
+	</body>
 </html>
