--- a/live/index.html
+++ b/live/index.html
@@ -3,8 +3,11 @@
 <head>
   <link rel="manifest" href="sociroapp.webmanifest">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-  <title>sro</title>
+  <meta name="viewport" content="width=device-width; initial-scale=1; viewport-fit=cover">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <title>sro-v20240924</title>
   <style>
     html, body {
       margin: 0;
