--- a/live/app.html
+++ b/live/app.html
@@ -11,22 +11,22 @@
                 window.ROConfig = {
                     development: false,
                     target: document.getElementById("browser"),
-                    remoteClient:  "https://grf.rlaig.com/",
+                    remoteClient:  "https://grf.sociro.net/",
                     servers: [
                         {
                             display: 'Sociro',
                             desc: "Social Ragnarok Online",
-                            address: 'rlaig.com',
+                            address: 'sociro.net',
                             port: 6900,
                             version: 55,
                             langtype: 1,
                             packetver: 20220406,
-                            socketProxy: "wss://rlaig.com:5999/",
+                            socketProxy: "wss://sociro.net:5999/",
                             packetKeys: false,
                             renewal: true
                         }
                     ],
-                    version: 20240924.01,
+                    version: 20240925.00,
                     packetDump: false,
                     skipServerList: true,
                     skipIntro: true,
@@ -37,7 +37,7 @@
                     enableRefineUI: true,
                     enableDmgSuffix: true,
                     enableCheckAttendance: true,
-                    CameraMaxZoomOut: 3,
+                    CameraMaxZoomOut: 6,
                     loadLua: true,
                 };
                 script = document.createElement('script');
