--- a/live/index.html
+++ b/live/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" type="image/ico" href="favicon.ico">
   <link rel="manifest" href="sociroapp.webmanifest">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width; initial-scale=1; viewport-fit=cover">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>sro-v20240924</title>
+  <title>sro-v20240925</title>
   <style>
     html, body {
       margin: 0;
@@ -17,10 +15,16 @@
       width: 100%;
       height: 100%;
     }
-    #app {
+	#app {
+	  width: 100%;
+	  height: 100%;
+	}
+    /*
+	#app {
       width: 100%;
       aspect-ratio: 1024/768;
     }
+	*/
   </style>
 </head>
 <body>
