--- a/live/app.html
+++ b/live/app.html
@@ -23,10 +23,11 @@
                             packetver: 20220406,
                             socketProxy: "wss://sociro.net:5999/",
                             packetKeys: false,
+							registrationweb: "https://sociro.net/account/create/",
                             renewal: true
                         }
                     ],
-                    version: 20240925.00,
+                    version: 20240930.00,
                     packetDump: false,
                     skipServerList: true,
                     skipIntro: true,
@@ -37,7 +38,7 @@
                     enableRefineUI: true,
                     enableDmgSuffix: true,
                     enableCheckAttendance: true,
-                    CameraMaxZoomOut: 6,
+                    CameraMaxZoomOut: 5,
                     loadLua: true,
                 };
                 script = document.createElement('script');
