--- a/live/model.html
+++ b/live/model.html
@@ -10,18 +10,18 @@
                     window.addEventListener("load", (event) => {
                         window.ROConfig = {
                             development: false, // don't need to compile javascript files in chrome app since it's already a package.
-							remoteClient:  "https://grf.rlaig.com/",
+							remoteClient:  "https://grf.sociro.net/",
                             servers: [
                                 {
                                     display: 'sociro',
                                     desc: "server-beta",
-                                    address: 'rlaig.com',
+                                    address: 'sociro.net',
                                     port: 6900,
                                     version: 55,
                                     langtype: 5,
                                     packetver: 20180704,
                                     forceUseAddress: false,
-                                    socketProxy: "ws://rlaig.com:5999/",
+                                    socketProxy: "wss://sociro.net:5999/",
                                     packetKeys: false
                                 },
                             ],
