--- a/live/app.html
+++ b/live/app.html
@@ -14,8 +14,8 @@
                     remoteClient:  "https://grf.sociro.net/",
                     servers: [
                         {
-                            display: 'Sociro',
-                            desc: "Social Ragnarok Online",
+                            display: 'sociRO',
+                            desc: "sociRO",
                             address: 'sociro.net',
                             port: 6900,
                             version: 55,
@@ -27,7 +27,7 @@
                             renewal: true
                         }
                     ],
-                    version: 20241003.00,
+                    version: 20241004.00,
                     packetDump: false,
                     skipServerList: true,
                     skipIntro: true,
