--- a/live/map.html
+++ b/live/map.html
@@ -3,7 +3,8 @@
         <html>
             <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-                <title>sociro-v-1-grf</title>
+                <title>sociro-v1map</title>
+                <meta name="viewport" content="width=device-width; initial-scale=1; viewport-fit=cover">
             </head>
             <body>
                 <script>
@@ -21,7 +22,7 @@
                                     langtype: 5,
                                     packetver: 20180704,
                                     forceUseAddress: false,
-                                    socketProxy: "wss://socirot.net:5999/",
+                                    socketProxy: "wss://sociro.net:5999/",
                                     packetKeys: false
                                 },
                             ],
