--- a/live/grf.html
+++ b/live/grf.html
@@ -3,7 +3,8 @@
         <html>
             <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-                <title>sociro-v-1-grf</title>
+                <title>sociro-v1grf</title>
+                <meta name="viewport" content="width=device-width; initial-scale=1; viewport-fit=cover">
             </head>
             <body>
                 <script>
