--- a/live/index.html
+++ b/live/index.html
@@ -4,8 +4,8 @@
   <link rel="icon" type="image/ico" href="favicon.ico">
   <link rel="manifest" href="sociroapp.webmanifest">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width; initial-scale=1; viewport-fit=cover">
-  <title>sro-v20241003</title>
+  <meta name="viewport" content="width=device-width; initial-scale=1;">
+  <title>sro-v20241004</title>
   <style>
     html, body {
       margin: 0;
