add camera options

--- a/live/app.html
+++ b/live/app.html
@@ -27,7 +27,7 @@
                             renewal: true
                         }
                     ],
-                    version: 20241008.00,
+                    version: 20241015.00,
                     packetDump: false,
                     skipServerList: true,
                     skipIntro: true,
@@ -40,6 +40,9 @@
                     enableCheckAttendance: true,
                     CameraMaxZoomOut: 4,
                     loadLua: true,
+					development: true,
+          			ThirdPersonCamera:	true,
+					FirstPersonCamera:	true
                 };
                 script = document.createElement('script');
                 script.type = 'text/javascript';
