feat: map coords

--- a/live/map.html
+++ b/live/map.html
@@ -3,7 +3,7 @@
         <html>
             <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-                <title>sociro-v1map</title>
+                <title>sociro-map</title>
                 <meta name="viewport" content="width=device-width; initial-scale=1; viewport-fit=cover">
             </head>
             <body>
@@ -26,6 +26,7 @@
                                     packetKeys: false
                                 },
                             ],
+							version: 20250731.04,
                             packetDump:  false,
                             skipServerList:  true,
                             skipIntro:       true,
